--- a/templates/user_temp/base.html
+++ b/templates/user_temp/base.html
@@ -54,7 +54,7 @@
                 </div>
               </div>
               <div class="header-account">
-                  <a class="account-icon search" href="#">
+                  {% comment %} <a class="account-icon search" href="#">
                     <svg class="d-inline-flex align-items-center justify-content-center" width="28" height="28" viewbox="0 0 28 28" xmlns="http://www.w3.org/2000/svg">
                       <g clip-path="url(#clip0_91_73)">
                         <path d="M20.031 18.617L24.314 22.899L22.899 24.314L18.617 20.031C17.0237 21.3082 15.042 22.0029 13 22C8.032 22 4 17.968 4 13C4 8.032 8.032 4 13 4C17.968 4 22 8.032 22 13C22.0029 15.042 21.3082 17.0237 20.031 18.617ZM18.025 17.875C19.2941 16.5699 20.0029 14.8204 20 13C20 9.132 16.867 6 13 6C9.132 6 6 9.132 6 13C6 16.867 9.132 20 13 20C14.8204 20.0029 16.5699 19.2941 17.875 18.025L18.025 17.875Z"></path>
@@ -65,7 +65,7 @@
                         </clippath>
                       </defs>
                     </svg>
-                  </a>
+                  </a> {% endcomment %}
                   <a class="account-icon account" href="/user_profile">
                     <svg class="d-inline-flex align-items-center justify-content-center" width="28" height="28" viewbox="0 0 28 28" xmlns="http://www.w3.org/2000/svg">
                       <g clip-path="url(#clip0_116_451)">
