--- a/templates/user_temp/user_sign_up.html
+++ b/templates/user_temp/user_sign_up.html
@@ -3,7 +3,7 @@
 {% block title %}SIGN UP{% endblock title %}
 {% block body %}
 
-<section class="breadcrumb-option">
+<section class="breadcrumb-option" style="margin-top: 90px;">
   <div class="container">
     <div class="row">
       <div class="col-lg-12">
