--- a/templates/admin_temp/admin_edit_product.html
+++ b/templates/admin_temp/admin_edit_product.html
@@ -45,11 +45,11 @@
                         <span class="text">Users List</span>
                     </a>
                 </li>
-                <li class="menu-item ">
+                {% comment %} <li class="menu-item ">
                     <a class="menu-link" href="/admin_banners"> <i class="icon material-icons md-store"></i>
                         <span class="text">Banners</span>
                     </a>
-                </li>
+                </li> {% endcomment %}
             </ul>
             
         </nav>
