--- a/templates/user_temp/user_forgot_password.html
+++ b/templates/user_temp/user_forgot_password.html
@@ -4,7 +4,7 @@
 {% block body %}
 
 <!-- Breadcrumb Section Begin -->
-<section class="breadcrumb-option">
+<section class="breadcrumb-option" style="margin-top: 90px;">
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-12">
