--- a/templates/user_temp/user_index.html
+++ b/templates/user_temp/user_index.html
@@ -34,7 +34,7 @@
 							</div>
 								
 							<div class="layer-slick1 animated visible-false" data-appear="zoomIn" data-delay="1600">
-								<a href="product.html" class="flex-c-m stext-101 cl0 size-101 bg1 bor1 hov-btn1 p-lr-15 trans-04">
+								<a href="/user_shop" class="flex-c-m stext-101 cl0 size-101 bg1 bor1 hov-btn1 p-lr-15 trans-04">
 									Shop Now
 								</a>
 							</div>
@@ -58,7 +58,7 @@
 							</div>
 								
 							<div class="layer-slick1 animated visible-false" data-appear="slideInUp" data-delay="1600">
-								<a href="product.html" class="flex-c-m stext-101 cl0 size-101 bg1 bor1 hov-btn1 p-lr-15 trans-04">
+								<a href="/user_shop" class="flex-c-m stext-101 cl0 size-101 bg1 bor1 hov-btn1 p-lr-15 trans-04">
 									Shop Now
 								</a>
 							</div>
@@ -66,7 +66,7 @@
 					</div>
 				</div>
 
-				<div class="item-slick1" style="background-image: url({% static 'img/hero/hero-3.jpg' %});">
+				<div class="item-slick1" style="background-image: url({% static 'img/hero/hero-4.jpg' %});">
 					<div class="container h-full">
 						<div class="flex-col-l-m h-full p-t-100 p-b-30 respon5">
 							<div class="layer-slick1 animated visible-false" data-appear="rotateInDownLeft" data-delay="0">
@@ -82,7 +82,7 @@
 							</div>
 								
 							<div class="layer-slick1 animated visible-false" data-appear="rotateIn" data-delay="1600">
-								<a href="product.html" class="flex-c-m stext-101 cl0 size-101 bg1 bor1 hov-btn1 p-lr-15 trans-04">
+								<a href="/user_shop" class="flex-c-m stext-101 cl0 size-101 bg1 bor1 hov-btn1 p-lr-15 trans-04">
 									Shop Now
 								</a>
 							</div>
@@ -96,7 +96,7 @@
     <div class="container">
         <div class="row">
             {% for category in links %}
-                {% if not category.soft_deleted and forloop.first %}
+                {% if not category.soft_deleted and category.category_name == "Boots" %}
                     <div class="col-lg-7 offset-lg-4">
                         <div class="banner__item">
                             <div class="banner__item__pic">
@@ -110,8 +110,9 @@
                     </div>
                 {% endif %}
             {% endfor %}
+
             {% for category in links %}
-                {% if not category.soft_deleted and forloop.counter == 2 %}
+                {% if not category.soft_deleted and category.category_name == "Footballl " %}
                     <div class="col-lg-5">
                         <div class="banner__item banner__item--middle">
                             <div class="banner__item__pic">
@@ -126,7 +127,7 @@
                 {% endif %}
             {% endfor %}
             {% for category in links %}
-                {% if not category.soft_deleted and forloop.counter == 3 %}
+                {% if not category.soft_deleted and category.category_name == "Gloves" %}
                     <div class="col-lg-7">
                         <div class="banner__item banner__item--last">
                             <div class="banner__item__pic">
@@ -188,9 +189,6 @@
           </div>
     </section> {% endcomment %}
     <!-- Portfolio Section End -->
-
-
-
 
     <!-- Product Section Begin -->
     {% comment %} <section class="product spad">
