--- a/templates/user_temp/user_order_detailed_view.html
+++ b/templates/user_temp/user_order_detailed_view.html
@@ -4,7 +4,7 @@
 {% block body %}
 
 <!-- Breadcrumb Section Begin -->
-<section class="breadcrumb-option">
+<section class="breadcrumb-option"style="margin-top: 90px;">
   <div class="container">
     <div class="row">
       <div class="col-lg-12">
@@ -104,6 +104,50 @@
                                 </table>
                             </div>
                             <a class="btn btn-secondary print ms-2" href="#">Download Invoice</a>
+
+                            <!-- Button trigger modal -->
+                            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+                                Review
+                            </button>
+                            
+                            <!-- Modal -->
+                            <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                <div class="modal-dialog" role="document">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                    <h5 class="modal-title" id="exampleModalLabel">Write Your Review</h5>
+                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                        <span aria-hidden="true">&times;</span>
+                                    </button>
+                                    </div>
+                                    <div class="modal-body">
+                                        <div class="block-form-comment">
+                                            <form method="POST" id="review_submit" action="{% url 'user_sumbit_review' order_products.0.product.id %}">
+                                                {% csrf_token %}
+                                                <div class="row">
+                                                    <div class="col-lg-12">
+                                                        <div class="form-group">
+                                                        <input class="form-control" type="text" placeholder="Tittle" name="subject">
+                                                        </div>
+                                                    </div>
+                                                    <div class="col-lg-12">
+                                                        <div class="form-group">
+                                                        <textarea class="form-control" placeholder="Review" rows="5"  name="review" required></textarea>
+                                                        </div>
+                                                    </div>
+                                                    <div class="col-lg-12">
+                                                        <div class="text-center mt-10">
+                                                        <button type="submit" class="btn btn-red">Post Review</button>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </form>
+                                        </div>
+                                    </div>
+
+                                </div>
+                                </div>
+                            </div>
 
                         </div>
                         <div class="invoice-footer mt25">
