--- a/templates/admin_temp/admin_index.html
+++ b/templates/admin_temp/admin_index.html
@@ -45,6 +45,11 @@
                         <span class="text">Users List</span>
                     </a>
                 </li>
+                <li class="menu-item  ">
+                    <a class="menu-link" href="/admin_review"> <i class="icon material-icons md-person"></i>
+                        <span class="text">Reviews</span>
+                    </a>
+                </li>
                 {% comment %} <li class="menu-item  ">
                     <a class="menu-link" href="/admin_banners"> <i class="icon material-icons md-store"></i>
                         <span class="text">Banners</span>
